--- a/install/style.css
+++ b/install/style.css
@@ -1,36 +1,6 @@
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td,
-html body * span.clear, html body * div.clear, html body * li.clear, html body * dd.clear {
-background:transparent none repeat scroll 0 0;
-border:0 none;
-font-size:100%;
-margin:0;
-outline-color:-moz-use-text-color;
-outline-style:none;
-outline-width:0;
-padding:0;
-vertical-align:baseline;
-}
+div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td,
 
-body {
--x-system-font:none;
-font-family:Helvetica,Arial,'Liberation Sans',FreeSans,sans-serif;
-font-size:75%;
-font-size-adjust:none;
-font-stretch:normal;
-font-style:normal;
-font-variant:normal;
-font-weight:normal;
-line-height:1.5;
-background: #F4F4F4 none repeat scroll 0 0;
-}
 
-html > body {
-font-size:13px;
-}
-body {
-background-color: #FFFFFF;
-font-family: "Lucida Grande","Lucida Sans Unicode",Verdana,Arial,Helvetica,sans-serif;
-}
 
 ol, ul {
 list-style-image:none;
